[project]
name = "secure-rag-system"
version = "0.1.0"
description = "Secure Rag System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.10",
    "huggingface-hub>=0.32.0",
    "openai>=1.82.0",
    "pydantic-ai>=0.2.8",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
]
